puts the text over the stages of the pipeline in center (horizontally). Tracks https://github.com/openshiftio/openshift.io/issues/2935

--- a/src/app/launcher/create-app/release-strategy-createapp-step/release-strategy-createapp-step.component.less
+++ b/src/app/launcher/create-app/release-strategy-createapp-step/release-strategy-createapp-step.component.less
@@ -16,6 +16,21 @@
     &.suggested {
       border-top: 1px solid @color-pf-blue;
     }
+
+    .f8launcher-pipeline-stages--line {
+      position: relative;
+      padding-bottom: 5px;
+      &:after {
+        position: absolute;
+        right: unset;
+        left: 45%;
+        bottom: -12px;
+      }
+    }
+
+    .f8launcher-pipeline-stages--arrow {
+      margin-top: 30px;
+    }
   }
   .list-group-item-header {
     cursor: default;
